# ObscuraStream

./: README.md  main.py  pyproject.toml
src/: __init__.py  config.py  utils.py  yolo_mediapipe.py  yolo_only.py
src/obscura_stream/: __init__.py  camera.py  config.py  detection.py  drawing.py  main.py  masking.py  utils.py  virtual_camera.py
