[project]
name = "ObscuraStream"
dynamic = ["version"]
description = "Privacy-focused webcam streaming tool with face/person detection and blur"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.20",
    "opencv-python>=4.10.0.84",
    "pyvirtualcam>=0.12.0",
    "ultralytics>=8.3.55",
]

[project.scripts]
obscura_stream = "obscura_stream.main:main"

[tool.setuptools.dynamic]
version = {attr = "obscura_stream._version.__version__"}
